--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,18 @@ dodrio-ext = { git = "https://github.com/extraymond/dodrio-ext" }
 gloo = "0.2.0"
 femme = "1.3.0"
 log = "0.4.8"
-console_error_panic_hook = "0.1.6"
+console_error_panic_hook = { version = "0.1.6", optional = true}
 futures-timer = { version = "3.0.1", features = ["wasm-bindgen"]}
 futures = "0.3.4"
 pulldown-cmark = "0.6.1"
 anyhow = "1.0.26"
 thiserror = "1.0.10"
+wee_alloc = { version = "0.4.5", optional = true }
+cfg-if = "0.1.10"
+
+[features]
+default = ["console_error_panic_hook", "wee_alloc"]
+
 
 [dependencies.web-sys]
 version = "0.3.35"
