--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ anyhow = "1.0.26"
 thiserror = "1.0.10"
 wee_alloc = { version = "0.4.5", optional = true }
 cfg-if = "0.1.10"
+vega_lite_3 = { version = "0.2.4", features = ["csv", "ndarray"]}
 
 [features]
 default = ["console_error_panic_hook", "wee_alloc"]
