--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2018"
 desription = "A blog written in rust compile to wasm."
 license = "MIT"
 
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
+
 [dependencies]
 js-sys = "0.3.35"
 include_dir = "0.5.0"
@@ -21,7 +24,7 @@ anyhow = "1.0.26"
 thiserror = "1.0.10"
 wee_alloc = { version = "0.4.5", optional = true }
 cfg-if = "0.1.10"
-vega_lite_3 = { version = "0.2.4", features = ["csv", "ndarray"]}
+vega_lite_3 = { version = "0.2.4", features = ["ndarray"], default-features = false }
 
 [features]
 default = ["console_error_panic_hook", "wee_alloc"]
@@ -49,3 +52,6 @@ crate-type = ["cdylib"]
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.8"
+
+[profile.release]
+lto = true
