--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2018"
 desription = "A blog written in rust compile to wasm."
 license = "MIT"
 
-[package.metadata.wasm-pack.profile.release]
-wasm-opt = false
+# [package.metadata.wasm-pack.profile.release]
+# wasm-opt = false
 
 [dependencies]
 js-sys = "0.3.35"
