--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ license = "MIT"
 [dependencies]
 js-sys = "0.3.35"
 include_dir = "0.5.0"
-# dodrio-ext = { git = "https://github.com/extraymond/dodrio-ext" }
-dodrio-ext = { path = "/home/extraymond/git/dodrio-ext/" }
+dodrio-ext = { git = "https://github.com/extraymond/dodrio-ext" }
+# dodrio-ext = { path = "/home/extraymond/git/dodrio-ext/" }
 gloo = "0.2.0"
 femme = "1.3.0"
 log = "0.4.8"
