include docs folder

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -2,11 +2,19 @@
 watch = { ignore_pattern = "public/*"}
 command = "wasm-pack"
 args = ["build", "--debug", "-t", "web", "-d", "docs", "--no-typescript"]
-dependeny = ["check"]
+dependencies = ["check"]
 
 [tasks.build-release]
 command = "wasm-pack"
 args = ["build", "--release", "-t", "web", "-d", "docs", "--no-typescript"]
+
+[tasks.cleanup]
+command = "rm"
+args= ["docs/.gitignore", "docs/package.json"]
+
+[tasks.make-release]
+dependencies = ["build-release", "cleanup"]
+
 
 [tasks.check]
 command = "cargo"
